--- a/Heart-Disease-Prediction.ipynb
+++ b/Heart-Disease-Prediction.ipynb
@@ -359,7 +359,47 @@
    "id": "86a56f3f-6e97-45b4-a9dd-ea7ee23ca89c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 4. DATA PREPROCESSING FOR MODELING\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*60)\n",
+    "print(\"DATA PREPROCESSING FOR MODELING\")\n",
+    "print(\"=\"*60)\n",
+    "\n",
+    "# Separate features and target\n",
+    "X = df.drop(target_col, axis=1)\n",
+    "y = df[target_col]\n",
+    "\n",
+    "# Check for categorical variables that need encoding\n",
+    "categorical_columns = X.select_dtypes(include=['object']).columns\n",
+    "print(f\"\\nCategorical columns found: {list(categorical_columns)}\")\n",
+    "\n",
+    "# Encode categorical variables if any\n",
+    "le = LabelEncoder()\n",
+    "for col in categorical_columns:\n",
+    "    X[col] = le.fit_transform(X[col])\n",
+    "    print(f\"✅ Encoded '{col}'\")\n",
+    "\n",
+    "# Split the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
+    "\n",
+    "print(f\"\\n📊 Data split complete:\")\n",
+    "print(f\"  - Training set size: {X_train.shape}\")\n",
+    "print(f\"  - Testing set size: {X_test.shape}\")\n",
+    "print(f\"  - Training set target distribution:\\n{y_train.value_counts()}\")\n",
+    "print(f\"  - Testing set target distribution:\\n{y_test.value_counts()}\")\n",
+    "\n",
+    "# Scale the features (important for logistic regression)\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "# Convert back to DataFrame for easier interpretation (optional)\n",
+    "X_train_scaled_df = pd.DataFrame(X_train_scaled, columns=X.columns)\n",
+    "X_test_scaled_df = pd.DataFrame(X_test_scaled, columns=X.columns)\n",
+    "\n",
+    "print(\"\\n✅ Features have been standardized (mean=0, std=1)\")"
+   ]
   }
  ],
  "metadata": {
