--- a/Heart-Disease-Prediction.ipynb
+++ b/Heart-Disease-Prediction.ipynb
@@ -740,6 +740,90 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "215c4b4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 7. FEATURE IMPORTANCE ANALYSIS\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*60)\n",
+    "print(\"FEATURE IMPORTANCE ANALYSIS\")\n",
+    "print(\"=\"*60)\n",
+    "\n",
+    "# For Logistic Regression - coefficients\n",
+    "if 'Logistic Regression' in trained_models:\n",
+    "    lr_model = trained_models['Logistic Regression']\n",
+    "    lr_coefficients = pd.DataFrame({\n",
+    "        'Feature': X.columns,\n",
+    "        'Coefficient': lr_model.coef_[0],\n",
+    "        'Abs_Coefficient': np.abs(lr_model.coef_[0])\n",
+    "    }).sort_values('Abs_Coefficient', ascending=False)\n",
+    "    \n",
+    "    print(\"\\n🔍 Top 10 Important Features (Logistic Regression - by coefficient magnitude):\")\n",
+    "    print(lr_coefficients.head(10).to_string(index=False))\n",
+    "\n",
+    "# For Decision Tree - feature importance\n",
+    "if 'Decision Tree' in trained_models:\n",
+    "    dt_model = trained_models['Decision Tree']\n",
+    "    dt_importance = pd.DataFrame({\n",
+    "        'Feature': X.columns,\n",
+    "        'Importance': dt_model.feature_importances_\n",
+    "    }).sort_values('Importance', ascending=False)\n",
+    "    \n",
+    "    print(\"\\n🌳 Top 10 Important Features (Decision Tree):\")\n",
+    "    print(dt_importance.head(10).to_string(index=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3ac50d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualize feature importance\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(14, 6))\n",
+    "\n",
+    "# Logistic Regression coefficients\n",
+    "if 'Logistic Regression' in trained_models:\n",
+    "    ax1 = axes[0]\n",
+    "    top_lr = lr_coefficients.head(10)\n",
+    "    colors = ['red' if x < 0 else 'green' for x in top_lr['Coefficient']]\n",
+    "    bars = ax1.barh(range(len(top_lr)), top_lr['Coefficient'], color=colors)\n",
+    "    ax1.set_yticks(range(len(top_lr)))\n",
+    "    ax1.set_yticklabels(top_lr['Feature'])\n",
+    "    ax1.set_xlabel('Coefficient Value')\n",
+    "    ax1.set_title('Logistic Regression - Top 10 Feature Coefficients')\n",
+    "    ax1.axvline(x=0, color='black', linestyle='-', linewidth=0.5)\n",
+    "    ax1.grid(True, alpha=0.3, axis='x')\n",
+    "    \n",
+    "    # Add value labels\n",
+    "    for i, (bar, coef) in enumerate(zip(bars, top_lr['Coefficient'])):\n",
+    "        ax1.text(coef + (0.01 if coef > 0 else -0.05), i, f'{coef:.3f}', \n",
+    "                va='center', fontsize=9)\n",
+    "\n",
+    "# Decision Tree feature importance\n",
+    "if 'Decision Tree' in trained_models:\n",
+    "    ax2 = axes[1]\n",
+    "    top_dt = dt_importance.head(10)\n",
+    "    bars = ax2.barh(range(len(top_dt)), top_dt['Importance'], color='skyblue')\n",
+    "    ax2.set_yticks(range(len(top_dt)))\n",
+    "    ax2.set_yticklabels(top_dt['Feature'])\n",
+    "    ax2.set_xlabel('Importance Score')\n",
+    "    ax2.set_title('Decision Tree - Top 10 Feature Importance')\n",
+    "    ax2.grid(True, alpha=0.3, axis='x')\n",
+    "    \n",
+    "    # Add value labels\n",
+    "    for i, (bar, imp) in enumerate(zip(bars, top_dt['Importance'])):\n",
+    "        ax2.text(imp + 0.01, i, f'{imp:.3f}', va='center', fontsize=9)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
